syntax = "proto3";
package proto;

message SignInRequest {
  string id = 1;
  string password = 2;
  string accessToken = 3;
}

message SignInResponse {
  string access_token = 3;
}

message SignUpRequest {
  string id = 1;
  string username = 2;
  string password = 3;
  string mail = 4;
}

message SignUpResponse {
  bool ok = 1;
}

message VerifyCandidateRequest {
}

message VerifyCandidateResponse{
}

message TokenClaim {
  string token = 1;
}

message IsTokenValidated {
  bool ok = 1;
}

service AuthService {
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  //rpc VerifyCandidate(VerifyCandidateRequest) returns (VerifyCandidateResponse);
  //rpc ValidateTokenClaim(TokenClaim) returns (IsTokenValidated);
}